sort.basic.bubble.AlgBubbleSort1.scala.code
var nbValeurs=getNombresValeurs()

def bubbleSort()  {
  for (i <- 1 to nbValeurs){
    for (j<- 2 to nbValeurs{
      
    }
  }
  
}